--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "lint": "expo lint"
   },
   "dependencies": {
+    "@emailjs/react-native": "^5.1.0",
     "@expo-google-fonts/inter": "^0.3.0",
     "@expo/vector-icons": "^14.1.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "expo": "~53.0.9",
-    "expo-app-loading": "^2.1.1",
+    "expo-app-loading": "^1.0.3",
     "expo-blur": "~14.1.4",
     "expo-constants": "~17.1.6",
     "expo-font": "~13.3.1",
