add component UpladButton and add to index

--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "react-native-screens": "~4.10.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "undefined": "@expo-google-fonts/[KronaOne-Regular]"
+    "undefined": "@expo-google-fonts/[KronaOne-Regular]",
+    "expo-camera": "~16.1.11",
+    "expo-image-picker": "~16.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
