--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
     "@expo/vector-icons": "^14.1.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
-    "@react-navigation/native": "^7.1.6",
+    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/stack": "^7.4.5",
     "expo": "~53.0.9",
     "expo-app-loading": "^1.0.3",
     "expo-blur": "~14.1.4",
+    "expo-camera": "~16.1.11",
     "expo-constants": "~17.1.6",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.1.7",
+    "expo-image-picker": "~16.1.4",
     "expo-linking": "~7.1.5",
     "expo-router": "~5.0.6",
     "expo-splash-screen": "~0.30.8",
@@ -37,12 +40,10 @@
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.10.0",
+    "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "undefined": "@expo-google-fonts/[KronaOne-Regular]",
-    "expo-camera": "~16.1.11",
-    "expo-image-picker": "~16.1.4"
+    "undefined": "@expo-google-fonts/[KronaOne-Regular]"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
